--- a/style-mobile.css
+++ b/style-mobile.css
@@ -1,7 +1,7 @@
 
 @font-face {
   font-family: 'titlefont';
-  src: url('adlib-regular-webfont.woff') format("truetype");
+  src: url('adlib_r.ttf') format("truetype");
 }
 
 @font-face {
