--- a/style-mobile.css
+++ b/style-mobile.css
@@ -82,7 +82,7 @@ a{
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  padding: 3vh;
+  /* padding: 3vh; */
   padding-left: 0.7vw;
   padding-top: 3vw;
 }
