--- a/style-mobile.css
+++ b/style-mobile.css
@@ -64,7 +64,7 @@ a{
   position: absolute;
   top: 0px;
   left: 0px;
-  width: 100%;
+  width: 81vw;
   padding-top: 3vh;
 
 }
@@ -77,7 +77,7 @@ a{
 
   position: sticky;
   top: 0;
-  height: 96vh;
+  height: 86vh;
   margin-top: -8vh;
   display: flex;
   flex-direction: column;
